--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,10 @@ matrix:
     env: OF_VERS=5
 
 before_install:
-    - sudo add-apt-repository http://dl.openfoam.org/ubuntu
     - sudo sh -c "wget -O - http://dl.openfoam.org/gpg.key | apt-key add -"
+    - sudo add-apt-repository http://dl.openfoam.org/ubuntu
     - sudo apt-get update -qq
-    - sudo apt-get install -qq openfoam${OF_VERS}
+    - sudo apt-get -y install -qq openfoam${OF_VERS}
 
 install:
     - source /opt/openfoam${OF_VERS}/etc/bashrc
