added parallal to steadyNS.C

--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,12 @@ Working_examples
 **/processor*
 **/linux*
 **/Offline
+**/processor*
 *.pdf
 *.dep
 *.orig
 examples
 tutorials_dev
+**/StreamTest
+**/UtilitiesTest
 *~
