--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -13,4 +13,4 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Running docker container with openfoam
-        run : docker run -v "$PWD/:/root" opencfd/openfoam2106-dev /root/unitTests/gtest/script.sh
+        run : docker run -v "$PWD/:/root" opencfd/openfoam2106-dev /root/gtest/script.sh
