modified docker file for integration with singularity

--- a/dockerfiles/arm64/Dockerfile
+++ b/dockerfiles/arm64/Dockerfile
@@ -25,11 +25,13 @@ USER $USER
 ENV HOME /home/$USER
 ENV USER $USER
 
-RUN /bin/bash -c "source OpenFOAM-v2106/etc/bashrc && \
+RUN /bin/bash -c "source /usr/lib/openfoam/openfoam2106/etc/bashrc && \
     cd ITHACA-FV && git submodule update --init && source etc/bashrc && \
-    ./Allwmake -au -j 4";
+    ./Allwmake -tau -j 4";
 
+USER root
+RUN 	cp -r /home/ithacafv/OpenFOAM/ithacafv-v2106/platforms/linux64GccDPInt32Opt/bin/* /bin/
 
+USER $USER
 WORKDIR $HOME
-COPY .bashrc $HOME/.bashrc
 ENTRYPOINT ["/bin/bash"]
