--- a/.github/workflows/Singularity.yml
+++ b/.github/workflows/Singularity.yml
@@ -15,16 +15,16 @@ jobs:
         uses: actions/checkout@v2
         
       - name: Singularity build
-        uses: singularity build singularity_image.sif docker://mehtapavan/ithacafv-manifest:5
+        run: singularity build singularity_image.sif docker://mehtapavan/ithacafv-manifest:5
         
       - name: moving
-        uses: mv singularity_image.sif /tutorials/CFD/01POD/
+        run: mv singularity_image.sif /tutorials/CFD/01POD/
         
       - name: copying
-        uses: cp singularity/Of.sh /tutorials/CFD/01POD/
+        run: cp singularity/Of.sh /tutorials/CFD/01POD/
         
       - name: Run singulairty in batch mode
-        uses: singularity exec singularity_image.sif /bin/bash Of.sh
+        run: singularity exec singularity_image.sif /bin/bash Of.sh
         
         
       
