--- a/.github/workflows/Singularity.yml
+++ b/.github/workflows/Singularity.yml
@@ -9,14 +9,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     
-      - name: Docker run for singulaity
-        run : docker run -it tacc/singularity_test1
-    
-      - name: Singularity build
-        run: singularity build singularity_image.sif docker://mehtapavan/ithacafv-manifest:5
-     
+ 
       - name: Checkout
         uses: actions/checkout@v2
+        
+      - uses: eWaterCycle/setup-singularity@v7
+        with:
+           singularity-version: 3.8.3
+        
+      - name: Singularity build
+        run: singularity build singularity_image.sif docker://mehtapavan/ithacafv-manifest:5
         
       - name: copying necessary files
         run: | 
