--- a/.github/workflows/Singularity.yml
+++ b/.github/workflows/Singularity.yml
@@ -3,6 +3,8 @@ name: Singularity
 on:
   push:
     branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
   singularity-from-docker-image:
@@ -13,6 +15,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         
+      - name: copying necessary files
+        run: /bin/bash -c "pwd && mv singularity_image.sif /ITHACA-FV/tutorials/CFD/01POD/ && \ 
+          cp singularity/Of.sh tutorials/CFD/01POD/ && \
+          cd /tutorials/CFD/01POD/"
+        
       - uses: eWaterCycle/setup-singularity@v7
         with:
            singularity-version: 3.8.3
@@ -21,7 +28,7 @@ jobs:
         run: singularity build singularity_image.sif docker://mehtapavan/ithacafv-manifest:5
         
       - name: copying necessary files
-        run: /bin/bash -c "mv singularity_image.sif /ITHACA-FV/tutorials/CFD/01POD/ && \ 
+        run: /bin/bash -c "pwd && mv singularity_image.sif /ITHACA-FV/tutorials/CFD/01POD/ && \ 
           cp singularity/Of.sh tutorials/CFD/01POD/ && \
           cd /tutorials/CFD/01POD/"
         
