--- a/.github/workflows/Singularity.yml
+++ b/.github/workflows/Singularity.yml
@@ -15,11 +15,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         
-      - name: copying necessary files
-        run: /bin/bash -c "pwd && mv singularity_image.sif /ITHACA-FV/tutorials/CFD/01POD/ && \ 
-          cp singularity/Of.sh tutorials/CFD/01POD/ && \
-          cd /tutorials/CFD/01POD/"
-        
       - uses: eWaterCycle/setup-singularity@v7
         with:
            singularity-version: 3.8.3
@@ -28,9 +23,9 @@ jobs:
         run: singularity build singularity_image.sif docker://mehtapavan/ithacafv-manifest:5
         
       - name: copying necessary files
-        run: /bin/bash -c "pwd && mv singularity_image.sif /ITHACA-FV/tutorials/CFD/01POD/ && \ 
-          cp singularity/Of.sh tutorials/CFD/01POD/ && \
-          cd /tutorials/CFD/01POD/"
+        run: /bin/bash -c "mv singularity_image.sif `pwd`/ITHACA-FV/tutorials/CFD/01POD/ && \ 
+          cp `pwd`/singularity/Of.sh `pwd`/tutorials/CFD/01POD/ && \
+          cd `pwd`/tutorials/CFD/01POD/"
         
       - name: Run singulairty in batch mode
         run: singularity exec singularity_image.sif /bin/bash Of.sh
