--- a/.github/workflows/Singularity_from_docker.yml
+++ b/.github/workflows/Singularity_from_docker.yml
@@ -24,7 +24,7 @@ jobs:
         
       - name: copying necessary files
         run: /bin/bash -c "mv singularity_image.sif `pwd`/tutorials/CFD/01POD/ && \ 
-          cp `pwd`/singularity/Of.sh `pwd`/tutorials/CFD/01POD/ && \
+          mv `pwd`/singularity/Of.sh `pwd`/tutorials/CFD/01POD/ && \
           cd `pwd`/tutorials/CFD/01POD/"
         
       - name: Run singulairty in batch mode
