--- a/.github/workflows/Singularity_from_def.yml
+++ b/.github/workflows/Singularity_from_def.yml
@@ -19,12 +19,12 @@ jobs:
         with:
            singularity-version: 3.8.3
         
-      - name: Singularity build in detached mode (sudo)
-        run: sudo singularity build -d singularity_image_def.sif `pwd`/singularity/singularity-reciepe.def
+      - name: Singularity build in detached mode
+        run: singularity build -d singularity_image_def.sif `pwd`/singularity/singularity-reciepe.def
         
       - name: copying necessary files
         run: /bin/bash -c "mv singularity_image_def.sif `pwd`/tutorials/CFD/01POD/ && \ 
-          cp `pwd`/singularity/Of.sh `pwd`/tutorials/CFD/01POD/ && \
+          mv `pwd`/singularity/Of.sh `pwd`/tutorials/CFD/01POD/ && \
           cd `pwd`/tutorials/CFD/01POD/"
         
       - name: Run singulairty in batch mode
