--- a/.github/workflows/Singularity_from_docker.yml
+++ b/.github/workflows/Singularity_from_docker.yml
@@ -14,20 +14,23 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         
-      - name: copying necessary files
-        run: |
-          mv `pwd`/singularity/Of.sh `pwd`/tutorials/CFD/01POD/
-        
       - uses: eWaterCycle/setup-singularity@v7
         with:
            singularity-version: 3.8.3
+           
+      - name: Allocating the build directory
+        run: |
+          mkdir `pwd`/mycontainter
+          export SINGULARITY_TMPDIR=`pwd`/mycontainter
+          export SINGULARITY_CACHEDIR=`pwd`/mycontainter
         
       - name: Singularity build
         run: singularity build singularity_image.sif docker://mehtapavan/ithacafv-manifest:5
         
       - name: copying necessary files
         run: |
-          mv singularity_image.sif `pwd`/tutorials/CFD/01POD/ 
+          mv `pwd`/mycontainter/singularity_image.sif `pwd`/tutorials/CFD/01POD/
+          mv `pwd`/singularity/Of.sh `pwd`/tutorials/CFD/01POD/
           cd `pwd`/tutorials/CFD/01POD/
         
       - name: Run singulairty in batch mode
