--- a/.github/workflows/Singularity_from_def.yml
+++ b/.github/workflows/Singularity_from_def.yml
@@ -11,7 +11,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     
- 
       - name: Checkout
         uses: actions/checkout@v2
         
@@ -26,10 +25,11 @@ jobs:
         run: |
           mv singularity_image_def.sif `pwd`/tutorials/CFD/01POD/
           mv `pwd`/singularity/Of.sh `pwd`/tutorials/CFD/01POD/
-          cd `pwd`/tutorials/CFD/01POD/
         
       - name: Run singulairty in batch mode
-        run: singularity exec singularity_image_def.sif /bin/bash Of.sh
+        run: |
+          cd `pwd`/tutorials/CFD/01POD/
+          singularity exec singularity_image_def.sif /bin/bash Of.sh
         
         
       
