--- a/.github/workflows/Singularity_from_docker.yml
+++ b/.github/workflows/Singularity_from_docker.yml
@@ -25,7 +25,7 @@ jobs:
           export SINGULARITY_CACHEDIR=`pwd`/mycontainter
         
       - name: Singularity build
-        run: singularity build singularity_image.sif docker://mehtapavan/ithacafv-manifest:5
+        run: singularity build -E singularity_image.sif docker://mehtapavan/ithacafv-manifest:5
         
       - name: copying necessary files
         run: |
@@ -33,8 +33,10 @@ jobs:
           mv `pwd`/singularity/Of.sh `pwd`/tutorials/CFD/01POD/
           cd `pwd`/tutorials/CFD/01POD/
         
-      - name: Run singulairty in batch mode
-        run: singularity exec singularity_image.sif /bin/bash Of.sh
+      - name: Singulairty in batch mode
+        run: |
+          cd `pwd`/tutorials/CFD/01POD/
+          singularity exec singularity_image.sif /bin/bash Of.sh
         
         
       
