--- a/.github/workflows/Singularity_from_docker.yml
+++ b/.github/workflows/Singularity_from_docker.yml
@@ -31,9 +31,8 @@ jobs:
         
       - name: copying necessary files
         run: |
-          find . singularity_image.sif
-          #mv `pwd`/mycontainter/singularity_image.sif `pwd`/tutorials/CFD/01POD/
-          #mv `pwd`/singularity/Of.sh `pwd`/tutorials/CFD/01POD/
+          mv `singularity_image.sif `pwd`/tutorials/CFD/01POD/
+          mv `pwd`/singularity/Of.sh `pwd`/tutorials/CFD/01POD/
           #cd `pwd`/tutorials/CFD/01POD/
         
       - name: Singulairty in batch mode
