--- a/.github/workflows/Singularity_from_docker.yml
+++ b/.github/workflows/Singularity_from_docker.yml
@@ -31,8 +31,9 @@ jobs:
         
       - name: copying necessary files
         run: |
-          mv `singularity_image.sif `pwd`/tutorials/CFD/01POD/
-          mv `pwd`/singularity/Of.sh `pwd`/tutorials/CFD/01POD/
+          find ~ -name 'singularity_image.sif'
+          #mv `singularity_image.sif `pwd`/tutorials/CFD/01POD/
+          #mv `pwd`/singularity/Of.sh `pwd`/tutorials/CFD/01POD/
           #cd `pwd`/tutorials/CFD/01POD/
         
       - name: Singulairty in batch mode
