--- a/.github/workflows/Singularity_from_docker.yml
+++ b/.github/workflows/Singularity_from_docker.yml
@@ -32,9 +32,8 @@ jobs:
       - name: copying necessary files
         run: |
           find ~ -name 'singularity_image.sif'
-          #mv `singularity_image.sif `pwd`/tutorials/CFD/01POD/
-          #mv `pwd`/singularity/Of.sh `pwd`/tutorials/CFD/01POD/
-          #cd `pwd`/tutorials/CFD/01POD/
+          mv singularity_image.sif `pwd`/tutorials/CFD/01POD/
+          mv `pwd`/singularity/Of.sh `pwd`/tutorials/CFD/01POD/
         
       - name: Singulairty in batch mode
         run: |
