Singularity Implementation via Docker and Defination file, with github actions. Batch script included too.

--- a/dockerfiles/arm64/Dockerfile
+++ b/dockerfiles/arm64/Dockerfile
@@ -11,8 +11,12 @@ RUN apt-get update \
 		software-properties-common ;\
 		rm -rf /var/lib/apt/lists/*
 
-# add and enable the default user
+# add enviromental variables
 ARG USER=ithacafv
+ARG of_var="source /usr/lib/openfoam/openfoam2106/etc/bashrc"
+ARG ithaca_var="source /usr/lib/ITHACA-FV/etc/bashrc"
+
+# add and enable the default user
 RUN adduser --disabled-password --gecos '' $USER
 RUN adduser $USER sudo; echo '%sudo ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
 
@@ -25,11 +29,22 @@ USER $USER
 ENV HOME /home/$USER
 ENV USER $USER
 
-RUN /bin/bash -c "source OpenFOAM-v2106/etc/bashrc && \
-    cd ITHACA-FV && git submodule update --init && source etc/bashrc && \
-    ./Allwmake -au -j 4";
+RUN /bin/bash -c "source /usr/lib/openfoam/openfoam2106/etc/bashrc && \
+    cd ITHACA-FV && git submodule update --init && source /etc/bash.bashrc && \
+    ./Allwmake -tau -j 4";
+
+USER root
+RUN 	cp -r /home/ithacafv/OpenFOAM/ithacafv-v2106/platforms/linux64GccDPInt32Opt/bin/* /bin/
+RUN 	cp -r /home/ithacafv/OpenFOAM/ithacafv-v2106/platforms/linux64GccDPInt32Opt/lib/* /lib/
 
 
+#Update bashrc 
+RUN	echo $of_var >> /etc/bash.bashrc
+RUN	echo $ithaca_var >> /etc/bash.bashrc
+
+#Source bashrc
+RUN /bin/bash -c "source /etc/bash.bashrc"
+
+USER $USER
 WORKDIR $HOME
-COPY .bashrc $HOME/.bashrc
 ENTRYPOINT ["/bin/bash"]
