--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
+[submodule "extern/pybind11"]
+	path = extern/pybind11
+	url = ../../pybind/pybind11
+	branch = stable
 [submodule "src/thirdparty/Eigen"]
 	path = src/thirdparty/Eigen
 	url = https://gitlab.com/libeigen/eigen.git
