--- a/.github/workflows/docker_ithaca.yml
+++ b/.github/workflows/docker_ithaca.yml
@@ -2,7 +2,9 @@ name: Docker
 
 on:
   push:
-    branches: [ master ]
+    # Pattern matched against refs/tags
+    tags:
+      - '*'           # Push events to every tag not containing /
 
 jobs:
   docker-arm64:
@@ -61,29 +63,29 @@ jobs:
 
 
 
-  build-manifest:
-    needs: [docker-amd64, docker-arm64]
+  #build-manifest:
+    #needs: [docker-amd64, docker-arm64]
 
-    runs-on: ubuntu-latest
-    steps:
+    #runs-on: ubuntu-latest
+    #steps:
 
-      - name: Checkout
-        uses: actions/checkout@v2
+      #- name: Checkout
+        #uses: actions/checkout@v2
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+      #- name: Set up QEMU
+        #uses: docker/setup-qemu-action@v1
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+      #- name: Set up Docker Buildx
+        #uses: docker/setup-buildx-action@v1
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+      #- name: Login to DockerHub
+        #uses: docker/login-action@v1
+        #with:
+          #username: ${{ secrets.DOCKER_USERNAME }}
+          #password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: manifest creation
-        run: docker manifest create ithacafv/ithacafv:manifest-latest --amend ithacafv/ithacafv:manifest-amd64 --amend ithacafv/ithacafv:manifest-arm64
+      #- name: manifest creation
+        #run: docker manifest create ithacafv/ithacafv:manifest-latest --amend ithacafv/ithacafv:manifest-amd64 --amend ithacafv/ithacafv:manifest-arm64
 
-      - name: push manifest
-        run: docker manifest push ithacafv/ithacafv:manifest-latest
+      #- name: push manifest
+        #run: docker manifest push ithacafv/ithacafv:manifest-latest
