--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "src/thirdparty/Eigen"]
 	path = src/thirdparty/Eigen
 	url = https://gitlab.com/libeigen/eigen.git
+[submodule "src/thirdparty/spectra"]
+	path = src/thirdparty/spectra
+	url = https://github.com/yixuan/spectra.git
