FIX: fixed dockerfiles

--- a/dockerfiles/OF2412/Dockerfile
+++ b/dockerfiles/OF2412/Dockerfile
@@ -23,7 +23,7 @@ unzip libtorch-cxx11-abi-shared-with-deps-2.7.1+cpu.zip && \
 rm libtorch-cxx11-abi-shared-with-deps-2.7.1+cpu.zip && \
 conda tos accept --override-channels --channel https://repo.anaconda.com/pkgs/main && \
 conda tos accept --override-channels --channel  https://repo.anaconda.com/pkgs/r && \
-conda install -y -c conda-forge muq cmake && \
+conda install -y -c conda-forge muq cmake pybind11 && \
 conda clean -y --all
 ENV TORCH_LIBRARIES=/libtorch
 ENV MUQ_LIBRARIES=/root/miniconda3
