--- a/dockerfiles/OF2412/Makefile
+++ b/dockerfiles/OF2412/Makefile
@@ -5,12 +5,5 @@ clean:
 build:
 	docker build -t ithacafv/openfoam2412-muq2-pytorch -f ./Dockerfile .
 
-run: build
-	xhost +"local:docker" && \
-	docker run -ti --rm \
-        -v "${HOME}:/home/${ME}" \
-		-e DISPLAY=${DISPLAY} \
-        --security-opt seccomp=unconfined \
-		ubuntu-apc
-
-
+run: 
+	docker run -it ithacafv/openfoam2412-muq2-pytorch bash
