ENH: add Docker dependencies workflow and restructure OF2506 Dockerfiles
- Add new docker-dependencies.yml workflow for manual dependency builds
- Split OF2506 Dockerfile into main and separate dependency builds
- Create architecture-specific dependency Dockerfiles (amd64-deps, arm64-deps)
- Update maintainer labels to giovannistabile@santannapisa.it
- Remove unused Makefile from OF2506 directory
- Configure dependencies workflow to push to ithacafv/ithacafv-dependencies

--- a/dockerfiles/OF2412/Dockerfile
+++ b/dockerfiles/OF2412/Dockerfile
@@ -3,7 +3,7 @@
 ARG TARGETARCH
 FROM ithacafv/openfoam2412-muq2-pytorch:${TARGETARCH} AS base
 
-LABEL maintainer="moaadkhamlich@gmail.com"
+LABEL maintainer="giovannistabile@santannapisa.it"
 
 USER root
 
