ENH: consolidate Docker build architecture and update workflow
- Create unified multi-arch Dockerfile for ITHACA-FV builds
- Remove obsolete docker_ithaca.yml workflow file
- Update docker-publish.yml to use centralized Dockerfile
- Fix OpenFOAM version references in OF2506 dependencies
- Remove redundant libtorch downloads from arm64 dependency builds
- Streamline dependency management across architecture variants

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -44,7 +44,8 @@ jobs:
       id: build
       uses: docker/build-push-action@v5
       with:
-        context: ./dockerfiles/OF2412
+        context: ./dockerfiles
+        file: ./dockerfiles/Dockerfile
         platforms: linux/amd64
         labels: ${{ steps.meta.outputs.labels }}
         cache-from: type=gha
@@ -85,7 +86,8 @@ jobs:
       id: build
       uses: docker/build-push-action@v5
       with:
-        context: ./dockerfiles/OF2412
+        context: ./dockerfiles
+        file: ./dockerfiles/Dockerfile
         platforms: linux/arm64
         labels: ${{ steps.meta.outputs.labels }}
         cache-from: type=gha
